src-tauri/tests/trybuild/private_tags_context.stderr
error[E0432]: unresolved import `app::contexts::Tag`
 --> tests/trybuild/private_tags_context.rs:3:5
  |
3 | use app::contexts::Tag;
  |     ^^^^^^^^^^^^^^^^^^ no `Tag` in `contexts`
  |
help: consider importing this struct instead
  |
3 | use app::contexts::tags::Tag;
  |                    ++++++
